# ruvrics

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_SUMMARY.md  IMPLEMENTATION_INSTRUCTIONS.md  LICENSE  MANIFEST.in  PYPI_DEPLOYMENT.md  README.md  faq.md  pyproject.toml
docs/: AI_STABILITY_FINAL_SPEC.md  CONFIGURATION_GUIDE.md  FAQ.md
examples/: README.md  TEST_SCENARIOS.md  demo_consistent.json  demo_tool_ambiguous.json  demo_tool_mocks.json  demo_tools.json  query.json  query_executive_briefing.json  query_executive_v1.json  query_executive_v2.json  query_messages.json  query_simple.json  query_with_tools.json  run_tests.sh  system_prompt.txt  tool_mocks.json  tools.json
examples/edge_cases/: edge_1_subjective.json  edge_2_creative.json  edge_3_ambiguous_tool.json  edge_3_mocks.json  edge_3_tools.json  edge_4_vague_request.json  edge_5_conflicting.json  edge_6_highly_ambiguous.json  edge_6_mocks.json  edge_6_tools.json
examples/scenario_support_agent/: query.json  tool_mocks.json  tools.json
examples/scenarios/: README.md  scenario_1_mocks.json  scenario_1_multi_tool_ambiguity.json  scenario_1_tools.json  scenario_2_mocks.json  scenario_2_optional_tool.json  scenario_2_tools.json  scenario_3_argument_drift.json  scenario_3_mocks.json  scenario_3_tools.json  scenario_4_answer_mismatch.json  scenario_4_mocks.json  scenario_4_tools.json  scenario_5_mocks_empty.json  scenario_5_mocks_error.json  scenario_5_tool_failure.json  scenario_5_tools.json  scenario_6_mocks.json  scenario_6_multi_step.json  scenario_6_tools.json
ruvrics/: __init__.py  __main__.py  cli.py  comparison.py  config.py
ruvrics/analysis/: fingerprint.py  recommender.py  scorer.py
ruvrics/core/: adapters.py  executor.py  models.py
ruvrics/metrics/: claims.py  length.py  semantic.py  structural.py  tool.py
ruvrics/output/: formatter.py  markdown_report.py
ruvrics/utils/: errors.py  telemetry.py
tests/: test_analysis.py  test_config.py  test_executor.py  test_metrics.py  test_models.py
