[project]
name = "ruvrics"
version = "0.1.0"
description = "AI Behavioral Stability & Reliability Engine - Measure LLM consistency and reliability"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ruvrics Team"}
]
keywords = ["ai", "llm", "stability", "testing", "reliability", "openai", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.0",                      # CLI framework
    "openai>=1.0.0",                     # OpenAI API client
    "anthropic>=0.18.0",                 # Anthropic API client
    "sentence-transformers>=2.2.0",      # Semantic embeddings
    "numpy>=1.24.0",                     # Numerical operations
    "rich>=13.0.0",                      # Terminal formatting
    "pydantic>=2.0.0",                   # Data validation
    "python-dotenv>=1.0.0",              # Environment variable management
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
ruvrics = "ruvrics.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/ruvrics"
Documentation = "https://github.com/yourusername/ruvrics#readme"
Repository = "https://github.com/yourusername/ruvrics"
Issues = "https://github.com/yourusername/ruvrics/issues"

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["ruvrics*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=ruvrics",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
